# ArtifactStudio

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeLists_test.txt  CMakePresets.json  HEADER_REMOVAL_SUMMARY.md  analyze_cppm.py  analyze_fixes.py  analyze_opencv_gmf.py  build.bat  build_and_report.py  build_artifact.bat  build_artifact_core.bat  build_artifact_final.py  build_artifact_target.py  build_artifactcore.py  build_artifactcore.sh  check_ai_modules.py  check_opencv_violations.py  clean_rebuild.bat  clean_rebuild.py  direct_build.py  direct_exec.py  direct_run.py  do_replace.ps1  exec_fix_nonwidget.py  execute_build.py  export_ai_modules.py  final_exec_test.py  find_qt_includes.py  fix_gmf_qt.py  fix_includes.py  fix_nonwidget_gmf.py  fix_opencv_gmf.py  fix_opencv_includes.py  fix_qt_gmf.py  fix_qt_gmf_c1116.py  fix_qt_gmf_run.py  fix_qt_headers.py  (+43 more)
.github/: GIT_WORKFLOW_PARENT_CHILD.md  copilot-instructions.md
.kilo/plans/: 1776006401372-playful-nebula.md  1776308913755-tidy-sailor.md  git_integration_plan.md
ArtifactPr/: CMakeLists.txt  README.md
ArtifactPr/include/: ArtifactPrDemoData.hpp  ArtifactPrEditorEngine.hpp  ArtifactPrMainWindow.hpp  VideoPlayerWidget.hpp
ArtifactPr/src/: ArtifactPrDemoData.cpp  ArtifactPrEditorEngine.cpp  ArtifactPrMainWindow.cpp  main.cpp
cmake/: msvc-stdlib-modules.json  msvc-stdlib-modules.json.in  toolchain-msvc-v143.cmake
docs/: AI_API_CLOUD_WIDGET_NOTES.md  AI_API_EXTENDED_REFERENCE.md  ARCHIVED_MILESTONE_AUDIT_2026-04-27.md  BUG_INVESTIGATION_DILIGENT_VISIBILITY_OPACITY.md  BUG_REPORT_COMPOSITION_EDITOR_GHOST_OVERLAY_2026-04-28.md  COMPLETION_REPORT.md  COORDINATE_SYSTEMS.md  DIAGNOSTIC_SYSTEM_BACKLOG.md  DIAGNOSTIC_SYSTEM_MILESTONE.md  DRAG_DROP_IMPROVEMENTS.md  DRAWRECTLOCAL_ISSUES_AND_FIXES_2026-03-19.md  EFFECT_SYSTEM_SPECIFICATION.md  FEATURE_DICTIONARY_2026-04-17.md  HUE_SATURATION_IMPLEMENTATION_PLAN.md  IN_OUT_POINTS_INTEGRATION.md  ImGuizmo_Gizmo_Structure_Analysis.md  LAYER_COMPOSITE_TEST_WIDGET.md  LAYER_PANEL_DRAG_IMPROVEMENTS.md  M-CP-1_CAMERA_PROJECTION_LOG.md  MILESTONES_BACKLOG.md  MILESTONE_AFTERFX_INTEGRATION_2026-04-09.md  MILESTONE_AI_INTEGRATION_2026-04-09.md  MILESTONE_ANALYSIS_FINAL_2026-04-27.md  MILESTONE_COMPOSITION_FINAL_EFFECT_2026-04-14.md  MILESTONE_MESH_INSTANCING_2026-04-26.md  MILESTONE_OBJECT_REFERENCE_UI_2026-03-17.md  MILESTONE_PRIORITY_ROADMAP_2026-04-27.md  MILESTONE_PROJECT_HEALTH_PROBLEM_VIEW_2026-04-14.md  MILESTONE_SHAPE_LAYER_ENHANCEMENT_2026-04-28.md  MILESTONE_STATUS_CHECK_2026-04-27.md  MILESTONE_TEXT_ANIMATOR_INTEGRATION_2026-04-27.md  MILESTONE_TEXT_LAYER_UX_2026-04-27.md  MILESTONE_VERIFICATION_COMPLETE_2026-04-27.md  PLAYBACK_CONTROL_WIDGET_REFACTOR.md  PROPERTY_EDITOR_LAG_HYPOTHESIS_2026-04-25.md  REPO_PULL_WORKFLOW.md  REPO_PUSH_WORKFLOW.md  RGB_BGR_CHANNEL_ORDER_REFERENCE.md  SHAPE_LAYER_GIZMO_LAG_FIX_PLAN_2026-04-25.md  SHAPE_LAYER_GIZMO_LAG_HYPOTHESIS_2026-04-25.md  (+7 more)
docs/analysis/: ARTIST_PAIN_POINTS_CORE_2026-04-19.md  CORE_MODULE_MISSING_FEATURES_2026-04-19.md  DESIRED_IMPORT_FORMATS_2026-04-19.md
docs/arch/: ARTIFACTCORE_DUAL_CORE_DESIGN.md  ARTIFACTCORE_MODULE_CONNECTION_MAP.md  FFMPEG_AUDIO_VIDEO_MUX_DESIGN.md
docs/bugs/: AUDIO_END_STUTTER_ANALYSIS_2026-03-28.md  AUDIO_PLAYBACK_SYSTEM_ISSUES_2026-03-27.md  AUDIO_STUTTERING_HYPOTHESES_2026-03-28.md  BUG_ANALYSIS_SOLID_LAYER.md  BUG_COMPOSITION_EDITOR_OUTSIDE_GARBAGE_2026-04-18.md  BUG_COMPOSITION_RENDER_THREE_FIXES_2026-04-19.md  BUG_FIX_COMPOSITION_BACKGROUND_AND_CLEAR_COLOR_2026-04-10.md  BUG_FIX_COMPOSITION_RENDER_OVERLAY_OVERDRAW_2026-04-09.md  BUG_FIX_COMPOSITION_VIEWPORT_INTERACTION_PERF_2026-03-25.md  BUG_FIX_DILIGENT_SHARED_DEVICE_2026-03-20.md  BUG_FIX_GPU_TEXT_DEBUG_OVERLAY_THREAD_FLOOD_2026-04-19.md  BUG_FIX_GPU_TEXT_SHAPE_AUDIO_OUTPUT_2026-04-19.md  BUG_FIX_LLAMACPP_WINDOWS_UTF8_GARBLE_2026-04-08.md  BUG_FIX_PLAYHEAD_AICLOUD_GPU_TEXT_DPR_2026-04-19.md  BUG_FIX_REPORT_ISSUE_BATCH_2026-04-10.md  BUG_FIX_SHAPE_GPU_RENDER_QADS_SINGLETAB_2026-04-19.md  BUG_FIX_TIMELINE_UI_BATCH_2026-04-18.md  BUG_GIZMO_GHOST_TOPLEFT_2026-04-25.md  BUG_INVESTIGATION_COMPOSITION_VIEW_DILIGENT.md  BUG_INVESTIGATION_GIZMO_VISIBILITY_2026-03-24.md  BUG_LAYER_OPACITY_NOT_APPLIED_2026-04-18.md  BUG_PARTICLE_GPU_RENDER_2026-04-19.md  BUG_QADS_FLOATING_RESIZE_FIX.md  BUG_RENDER_SCHEDULER_THREAD_FLOOD_2026-04-18.md  BUG_TIMELINE_4ISSUES_2026-04-19.md  BUG_TRANSFORM_GIZMO_CACHE_DISABLED_2026-04-19.md  BUG_WASAPI_AUDIO_PERFORMANCE_2026-04-18.md  CODE_QUALITY_ISSUES_2026-03-25.md  COMPOSITION_BACKGROUND_CONFUSION_NOTE_2026-04-06.md  COMPOSITION_EDITOR_OPEN_ISSUES_2026-04-08.md  COMPOSITION_EDITOR_PERFORMANCE_2026-03-26.md  COMPOSITION_EDITOR_PERF_ANALYSIS_2026-04-11.md  COMPOSITION_EDITOR_PERF_AND_COMPUTE_HYPOTHESES_2026-03-24.md  COMPOSITION_EDITOR_RENDER_PIPELINE_BUGS_2026-04-04.md  COMPOSITION_FILL_NOT_VISIBLE_2026-04-05.md  COMPOSITION_VIEW_BOTTOM_BLANK_REGION_2026-04-03.md  COMPUTE_BLEND_FAILURE_HYPOTHESES_2026-03-23.md  DRAWRECTLOCAL_TRANSFORM_API_WIP_2026-03-21.md  EVENTBUS_CASCADE_REDRAW_PERF_2026-04-05.md  EVENTBUS_FLOW_ANALYSIS_2026-04-12.md  (+29 more)
docs/done/: ATLBASE_H_INVESTIGATION_2026-03-21.md  COORDINATE_SYSTEMS.md  DIALOG_REDESIGN_REPORT_2026-04-04.md  EXPORT_PIPELINE_INVESTIGATION_2026-03-20.md  MILESTONE_IMPLEMENTATION_STATUS_2026-03-26.md  MULTITHREADED_PLAYBACK_ENGINE.md  M_TL_COMPLETION_REPORT.md  PLAYHEAD_INVESTIGATION_2026-03-20.md  SESSION_WORK_2026-03-21.md
docs/drafts/: README.md  RENDER_CENTER_UI_DRAFT_2026-03-28.md
docs/experiments/: COMPOSITE_EDITOR_PERF_INVESTIGATION_2026-04-11.md  PERF_AND_FILL_INVESTIGATION_2026-04-10.md  (+3 more)
plans/: AFTER_EFFECTS_GAP_ANALYSIS.md  AFTER_EFFECTS_MISSING_FEATURES_PRIORITY_LIST.md  MILESTONE_APP_WHOLE_IMPROVEMENT_2026-04-11.md  MILESTONE_CORE_FEATURE_EXPANSION_2026-04-11.md
scripts/: generate_test_tone.ps1  manage_icons.py
tests/: CMakeLists.txt  README.md
tests/ArtifactCore/: CMakeLists.txt  StringTest.cpp  UtilsTest.cpp
tests/ArtifactCore/Color/: HueSaturationTest.cpp
tests/ArtifactCore/translations/: en.json  ja.json
tools/: fix_all_modules.py
(+429 files in other folders)
